markup and style for about and contact pages

--- a/css/index.css
+++ b/css/index.css
@@ -69,6 +69,7 @@ p {
 .container {
     width: 800px;
     margin: 0 auto;
+    
 }
 
 header {
@@ -196,6 +197,8 @@ nav a {
 footer {
     width: 100%;
     background: black;
+    margin-top: 40px;
+    
 }
 
 footer nav {
